--- a/res/layout/settings_list.xml
+++ b/res/layout/settings_list.xml
@@ -10,13 +10,14 @@
             android:entries="@array/displayMode"
             android:entryValues="@array/displayVals"
             android:title="@string/define_display"
-            android:summary="@string/define_display_summary" />
+            android:summary="@string/summary" />
         
         <com.arjerine.xdictionary.DictToastList
             android:key="toastModeVal"
             android:entries="@array/toastMode"
             android:entryValues="@array/toastVals"
-            android:title="@string/define_toast" />
+            android:title="@string/define_toast"
+            android:summary="@string/summary"/>
     </PreferenceCategory>
         
     <PreferenceCategory    
