--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2,7 +2,7 @@
 <resources>
     <string-array name="displayMode">
         <item name="@string/browser">Browser</item>
-        <item name="@string/popup">Popup</item>
+        <item name="@string/popup">Pop-up</item>
         <item name="@string/toast">Toast</item>
     </string-array>
     
