--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-      <color name="blue">#01467C</color>
+      <color name="gray">#353535</color>
 </resources>
